# cascade_ms_pipeline

./: README.md  example_config_dda.json  example_config_dia.json  pyproject.toml  requirements.txt
cascade_ms_pipeline/: __init__.py  analysis_tables.py  cli.py  cmd.py  config.py  dia_trimming.py  fasta.py  fasta_groups.py  fdr.py  indexed_mzml.py  pipeline.py  plots.py  protease.py  results.py  trimming.py  util.py
cascade_ms_pipeline/engines/: __init__.py  base.py  diann.py  sage.py
cascade_ms_pipeline/rescorers/: __init__.py  base.py  ms2rescore.py  oktoberfest.py
tests/: test_fasta_groups.py  test_fdr.py  test_pipeline_dry_run.py  test_trimming.py
